--- a/index.html
+++ b/index.html
@@ -1,7 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="utf-8">
     <head>
-        <title>A webpage</title>
-    </head>
-</html>
+<meta charset="utf-8">
+<title>Aqua Gaming-Home</title>
+<link rel="stylesheet" href="styleJS.css">
+</head>
+<body>
+<header>
+   <h1> Aqua Gaming</h1>
+</header>
+
+
+<div class="navSnake">
+<a class="active" href="snakeGame"><b>Snake Game</b></a>
+</div>
+
+<h5>Description:</h5>
+<p>Aqua Gaming is a gaming organization that uses 50% of its
+funds gained from selling game titles to organizations 
+aimed to save our sea wildlife. This website will be used
+ to promote games that will provide our organization with money in order for
+  it to be donated so we can save our oceans.</p>
+
+
+
+
+
+</body>
+<footer>
+    <b><i>
+        <a href="index.html">About us</a> &nbsp;&nbsp;
+        <a href="Snake ">Layout</a> &nbsp;&nbsp;
+
+
+
+</footer>
+
+
+
+
+
+
+
